[package]
name = "lock-bench"
version = "0.1.0"
authors = [
    "Aleksey Kladov <aleksey.kladov@gmail.com>",
    "QuarticCat <QuarticCat@pm.me>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
lock_api = "0.4"
parking_lot = "0.12"
spin = "0.9"
